--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container my-5">
         <header class="text-center mb-5">
-            <h1 class="display-4" style="font-family: 'Cinzel', serif;">The Money Egregore</h1>
+            <h1 class="display-4" style="font-family: 'Cinzel', serif;">The Capitalism</h1>
             <p class="lead" style="font-family: 'Lato', sans-serif;">An Intention Amplifier</p>
             <p class="text-white-50 mx-auto" style="max-width: 600px;">
                 You are about to interact with a symbolic representation of the collective consciousness of money.
